--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+div{
+	width:50%
+}
+.moviePic{
+	width:250px;
+	height:auto;
+	opacity:1;
+}
+.movieDetail{
+position:relative;
+	top:10px;
+	width:80%;
+	text-align:center;
+	font-size:20px;
+	
+
+	
+	
+}
